@@ -1,3 +1,6 @@
+<h5>2.0.1 RC1</h5> [2023/03/09]
+ - fixed bug in feedback (goffy)
+
 <h5>2.0.0 Stable</h5> [2023/02/28]
  - moved to last stable with smarty 2 (goffy)
 
